--- a/demo/iron-grid.html
+++ b/demo/iron-grid.html
@@ -174,6 +174,14 @@
         background-color: #fff;
       }
 
+      .header .cell {
+        height: 56px;
+      }
+
+      .dragging div:not([draggable]).cell.hover {
+        border-left: 2px solid #03A9F4;
+      }
+
       .item[selected] {
         background-color: #f5f5f5;
       }
@@ -226,7 +234,7 @@
 
     <template>
       <div id="scroller" style="overflow:auto; width: 360px; height: 400px" scroller="[[_getScroller()]]">
-        <div class="header" id="header">
+        <div class="header" id="header" on-dragover="_dragOver" on-dragleave="_dragLeave" on-dragend='_drop'>
           <div class="frozen">
             <div class="checkbox">
               <span class="vaadin-grid-selection-checkbox vaadin-grid style-scope">
@@ -237,7 +245,7 @@
             </div>
             <div class="cell">Name</div>
           </div>
-          <div class="cell">Surname</div>
+          <div class="cell" draggable="true" style="cursor: move; -webkit-user-select: none;" on-dragstart="_dragStarted">Surname</div>
           <div class="cell">Activity</div>
           <div class="cell">Target</div>
         </div>
@@ -280,11 +288,56 @@
         console.log('hoohaa');
       },
 
+      _dragme: function(e) {
+        if (e.detail.state == 'start') {
+          this._hovered = e.detail.hover();
+          this.toggleClass('dragging', true, this.$.header);
+        } else if (e.detail.state == 'end') {
+          this.toggleClass('dragging', false, this.$.header);
+          this.toggleClass('hover', false, this._hovered);
+        } else {
+          this.toggleClass('hover', false, this._hovered);
+          this._hovered = e.detail.hover();
+          this.toggleClass('hover', true, this._hovered);
+        }
+      },
+
+      _drop: function(e) {
+        if (this._draggedOver == this.$.header.querySelector('.cell')) {
+          this._doZHESWITCH();
+
+        }
+      },
+
+      _doZHESWITCH: function() {
+        var cells = this.$.header.querySelectorAll('.cell');
+        var text = cells[1].innerText;
+        cells[1].innerText = cells[0].innerText;
+        cells[0].innerText = text;
+      },
+
+      _dragOver: function(e) {
+        this._draggedOver = e.target;
+        this.toggleClass('hover', true, e.srcElement);
+      },
+
+      _dragLeave: function(e) {
+        this.toggleClass('hover', false, e.srcElement);
+      },
+
+      _dragStarted: function(e) {
+        this.toggleClass('dragging', true, this.$.header);
+      },
+
       _selectedItemsChanged: function(e) {
         //console.log(e);
       },
 
       ready: function() {
+        this.$.header.addEventListener('drop', function(e) {
+          console.log(e);
+        });
+
         this.employees = [];
         var names = ['Artur', 'Patrik', 'Henrik', 'Teemu'];
         var surnames = ['Signell', 'Lehtinen', 'Ahlroos', 'Paul'];
