--- a/demo/index.html
+++ b/demo/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body unresolved>
-  <vaadin-grid id="component" size="10000000" frozen-columns="1">
+  <vaadin-grid id="component" size="1000" frozen-columns="1">
     <vaadin-grid-column width="100px">
       <template>
         <i class="elItem">foo [[index]]</i>
