Fix disappearing border issue

--- a/vaadin-grid-scroller.html
+++ b/vaadin-grid-scroller.html
@@ -26,6 +26,7 @@
       :host {
         display: block;
         position: relative;
+        overflow: hidden;
       }
 
       @media only screen and (-webkit-max-device-pixel-ratio: 1) {
