--- a/test/index.html
+++ b/test/index.html
@@ -33,6 +33,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       'frozen-columns.html',
       'outer-scroller.html',
       'templates.html',
+      'treemap.html',
       'scrolling-mode.html',
       'row-height.html',
       'row-details.html',
