--- a/vaadin-grid.html
+++ b/vaadin-grid.html
@@ -5,6 +5,7 @@
 <link rel="import" href="vaadin-grid-data-source-behavior.html">
 <link rel="import" href="vaadin-grid-array-data-source-behavior.html">
 <link rel="import" href="vaadin-grid-selection-behavior.html">
+<link rel="import" href="tree-map.html">
 
 <dom-module id="vaadin-grid">
   <style>
@@ -60,7 +61,8 @@
       vaadin.elements.grid.RowDetailsBehavior,
       vaadin.elements.grid.DataSourceBehavior,
       vaadin.elements.grid.ArrayDataSourceBehavior,
-      vaadin.elements.grid.SelectionBehavior
+      vaadin.elements.grid.SelectionBehavior,
+      vaadin.elements.grid.HierarchyBehavior
     ],
 
     observers: ['_columnsChanged(columns.*)'],
